<resources>
    <string name="app_name">SensorMusicPlayer</string>
    <string name="title_graph">Accelerometer</string>
    <string name="tab_text_x">X-axis</string>
    <string name="tab_text_y">Y-axis</string>
    <string name="tab_text_z">Z-axis</string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_xyz">XYZ</string>
  <string name="root_title">Root title</string>
  <string name="title_basic_preference">Title basic</string>
  <string name="summary_basic_preference">Summary basic</string>
  <string name="title_stylish_preference">Title stylish</string>
  <string name="summary_stylish_preference">Summary stylish</string>
  <string name="inline_preferences">Title inline preference</string>
  <string name="title_checkbox_preference">Title checkbox</string>
  <string name="summary_checkbox_preference">Summary checkbox</string>
  <string name="dialog_based_preferences">Dialog based preferences</string>
  <string name="title_edittext_preference">Title edittext</string>
  <string name="summary_edittext_preference">Summary edittext</string>
  <string name="dialog_title_edittext_preference">Dialgo title</string>
  <string name="launch_preferences">Cat launch</string>
  <string name="title_screen_preference">Title screen</string>
  <string name="summary_screen_preference">Summary screen</string>
  <string name="title_next_screen_toggle_preference">Title next toggl</string>
  <string name="summary_next_screen_toggle_preference">Summary next toggle</string>
  <string name="title_intent_preference">Title intent</string>
  <string name="summary_intent_preference">Summary intent</string>
  <string name="preference_attributes">Title preference Attributes</string>
  <string name="title_parent_preference">Title parent</string>
  <string name="summary_parent_preference">Summart parent</string>
  <string name="title_child_preference">Title child</string>
  <string name="summary_child_preference">Summary child</string>
    <string name="tab_text_config">Config</string>
    <string name="activity_selector">Selector</string>
    <string name="label_testing">Test it</string>
    <string name="label_data_collection">Data collection</string>
    <string name="label_to_right">to Right</string>
    <string name="label_to_left">to Left</string>
    <string name="label_enter_your_username">Enter your username</string>
    <string name="label_select_a_gesture">Select a gesture</string>
  <string name="label_start">Start</string>
  <string name="label_press_start_button">Press the Start button to start recording\n Press again to stop it</string>
  <string name="label_stop">Stop</string>
  <string name="label_empty_numeric_field">0.0</string>
</resources>
